--- a/tracery/index.html
+++ b/tracery/index.html
@@ -8,6 +8,9 @@
 <script type="text/javascript" src="grammars.js"></script>
 <script type="text/javascript" src="main.js"></script>
 
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
+
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
 
@@ -15,6 +18,10 @@
   margin: 0px;
   padding: 0px;
   font-family: 'Ubuntu', sans-serif;
+}
+
+@font-face {
+  font-family: 'New Tegomin', serif;
 }
 
 body {
