--- a/tracery/index.html
+++ b/tracery/index.html
@@ -102,6 +102,8 @@ canvas {
   top: 0px;
   right: 0px;
   background:#ccc;
+  font-family: 'New Tegomin', serif;
+  font-size: 14px;
 }
 
 </style>
