--- a/maurer-rose/index.html
+++ b/maurer-rose/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <script type="text/javascript" src="../scripts/p5.min.js"></script>
-  <script type="text/javascript" src="polar.js"></script>
+  <script type="text/javascript" src="maurer.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
 
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <h1>Polar Line Drawing</h1>
+  <h1>Maurer Rose Modifications</h1>
 </body>
 
 </html>
