refactoring a bit -- input still needs work

--- a/tracery/index.html
+++ b/tracery/index.html
@@ -23,12 +23,15 @@
       font-family: 'Ubuntu', sans-serif;
     }
 
+/*
     @font-face {
       font-family: 'New Tegomin', serif;
     }
+    */
 
     body {
       background: #000;
+      overflow: hidden;
     }
 
     /* https://www.w3schools.com/howto/howto_css_responsive_header.asp */
