--- a/tracery/index.html
+++ b/tracery/index.html
@@ -5,6 +5,7 @@
   <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="p5.min.js"></script>
   <script type="text/javascript" src="p5.play.js"></script>
+  <script type="text/javascript" src="p5.sound.js"></script>
   <script type="text/javascript" src="fast-simplex-noise.js"></script>
   <script type="text/javascript" src="tracery.js"></script>
   <script type="text/javascript" src="grammars.js"></script>
