--- a/tracery/index.html
+++ b/tracery/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <!-- libs -->
   <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="p5.min.js"></script>
   <script type="text/javascript" src="p5.play.js"></script>
@@ -9,6 +10,13 @@
   <script type="text/javascript" src="fast-simplex-noise.js"></script>
   <script type="text/javascript" src="tracery.js"></script>
   <script type="text/javascript" src="grammars.js"></script>
+
+  <!-- game scripts -->
+  <script type="text/javascript" src="globals.js"></script>
+  <script type="text/javascript" src="helpers.js"></script>
+  <script type="text/javascript" src="map.js"></script>
+  <script type="text/javascript" src="collisions.js"></script>
+  <script type="text/javascript" src="quests.js"></script>
   <script type="text/javascript" src="main.js"></script>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
