--- a/tracery/index.html
+++ b/tracery/index.html
@@ -14,6 +14,7 @@
   <!-- game scripts -->
   <script type="text/javascript" src="globals.js"></script>
   <script type="text/javascript" src="helpers.js"></script>
+  <script type="text/javascript" src="towns.js"></script>
   <script type="text/javascript" src="map.js"></script>
   <script type="text/javascript" src="collisions.js"></script>
   <script type="text/javascript" src="quests.js"></script>
