moving to buffers

--- a/tracery/index.html
+++ b/tracery/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="map.js"></script>
   <script type="text/javascript" src="collisions.js"></script>
   <script type="text/javascript" src="quests.js"></script>
+  <script type="text/javascript" src="character.js"></script>
   <script type="text/javascript" src="main.js"></script>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
