--- a/branching/index.html
+++ b/branching/index.html
@@ -3,7 +3,7 @@
 <head>
   <script type="text/javascript" src="../scripts/CCapture.all.min.js"></script>
   <script type="text/javascript" src="../scripts/p5.min.js"></script>
-  <script type="text/javascript" src="sine.js"></script>
+  <script type="text/javascript" src="branching.js"></script>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
