--- a/magicka-like/index.html
+++ b/magicka-like/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="js/monster.js"></script>
   <script type="text/javascript" src="js/util.js"></script>
   <script type="text/javascript" src="js/spell.js"></script>
+  <script type="text/javascript" src="js/dialogue.js"></script>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
