--- a/magicka-like/index.html
+++ b/magicka-like/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <script type="text/javascript" src="../scripts/fast-simplex-noise.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/map.js"></script>
   <script type="text/javascript" src="js/tile.js"></script>
