--- a/magicka-like/index.html
+++ b/magicka-like/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="js/monster.js"></script>
   <script type="text/javascript" src="js/util.js"></script>
   <script type="text/javascript" src="js/spell.js"></script>
+  <script type="text/javascript" src="js/items.js"></script>
   <script type="text/javascript" src="js/dialogue.js"></script>
   <script type="text/javascript" src="js/levels.js"></script>
 
