--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -171,7 +171,34 @@ td.visited {
 tr {
   padding: 0px;
   margin: 0px;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* twine-user-script #1: "Story JavaScript" */
+}
+
+/* grid layout */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 5px 5px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "main main stats"
+    "main main map"
+    "messages messages messages";
+}
+
+.container div {
+  border: 1px black solid;
+  padding: 5px;
+}
+.main { grid-area: main; }
+.stats { grid-area: stats; }
+.map { 
+  grid-area: map; 
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.messages { grid-area: messages; }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* twine-user-script #1: "Story JavaScript" */
 /* js/constants.js, js/room.js, js/traceryGen.js, js/person.js, js/macroWhen.js */
 /* twine-user-script #2: "fast-simplex-noise.js" */
 /*
@@ -928,7 +955,7 @@ class Character {
     let cls = "red";
     if (this.isPlayer) // || this.friendly?
       cls = "green";
-    return "<span class='" + cls + "'>" + this.hp + "/" + this.max_hp + "</span>";
+    return "<font class='" + cls + "'>" + this.hp + "/" + this.max_hp + "</font>";
   }
 
   hit(dmg) {
@@ -956,11 +983,54 @@ window.Character = Character;
 /* Globals */\
 &lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $game to new GameManager()&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Begin" tags="noinventory" position="225,100" size="100,100">Welcome to asciiLike &lt;&lt;=$game.player.name&gt;&gt;!  You begin your story in a cave.  You have &lt;&lt;=$game.friends.length&gt;&gt; missing friends!</tw-passagedata><tw-passagedata pid="3" name="PassageHeader" tags="" position="350,100" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $currentPassage to &quot;Begin2&quot;&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Begin" tags="" position="225,100" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;div class=&quot;container&quot;&gt;
+  &lt;div class=&quot;main&quot;&gt;
+    &lt;&lt;=Story.get($currentPassage).text&gt;&gt;
+    &lt;hr size=&quot;1&quot; /&gt;
+
+    /* Get available passaages */
+    &lt;&lt;set _nextPassages to $game.getPassages()&gt;&gt;
+    &lt;&lt;for _i to 0; _i lt _nextPassages.length; _i++&gt;&gt;
+      &lt;&lt;set _nextRow = $game.player.row + _nextPassages[_i].row&gt;&gt;
+      &lt;&lt;set _nextCol = $game.player.col + _nextPassages[_i].col&gt;&gt;
+      &lt;&lt;set _nextPassage to $game.getPassage(_nextRow, _nextCol)&gt;&gt;
+      &lt;&lt;set _txt to _nextPassage + &quot;:&quot; + _nextPassages[_i].row + &quot;:&quot; + _nextPassages[_i].col&gt;&gt;
+      &lt;&lt;capture $game, _i, _nextPassages[_i], _nextRow, _nextCol, _nextPassage&gt;&gt;
+      &lt;&lt;link [[_txt|Begin]]&gt;&gt;
+        &lt;&lt;set $game.player.row to _nextRow&gt;&gt;
+        &lt;&lt;set $game.player.col to _nextCol&gt;&gt;
+        &lt;&lt;run $game.setPassageVisited(_nextRow, _nextCol)&gt;&gt;
+        &lt;&lt;set $currentPassage = _nextPassage&gt;&gt;
+      &lt;&lt;/link&gt;&gt;&lt;br /&gt;
+      &lt;&lt;/capture&gt;&gt;
+    &lt;&lt;/for&gt;&gt;
+
+  &lt;/div&gt;
+  &lt;div class=&quot;stats&quot;&gt;
+    &lt;div&gt;
+    XP: &lt;&lt;=$game.player.level&gt;&gt;&lt;br /&gt;
+    HP: &lt;&lt;=$game.player.getHP()&gt;&gt;&lt;br /&gt;
+    AC: &lt;&lt;=$game.player.ac&gt;&gt;&lt;br /&gt;
+    Friends found: &lt;&lt;=$game.friendsRescued&gt;&gt;&lt;br /&gt;
+    Row: &lt;&lt;=$game.player.row&gt;&gt; | Col: &lt;&lt;=$game.player.col&gt;&gt;&lt;br /&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+
+  &lt;div class=&quot;map&quot;&gt;
+    &lt;&lt;=$game.vizMap()&gt;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;messages bordered-grid-item&quot;&gt;i am messages&lt;/div&gt;
+&lt;/div&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="Begin2" tags="noinventory" position="350,100" size="100,100">Welcome to asciiLike &lt;&lt;=$game.player.name&gt;&gt;!  You begin your story in a cave.  You have &lt;&lt;=$game.friends.length&gt;&gt; missing friends!
+
+/* :: PassageHeader
+&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set _friendsHere = $game.getFriendsHere($game.player.row, $game.player.col)&gt;&gt;
-&lt;&lt;if _friendsHere.length gt 0&gt;&gt;
+&lt;&lt;if _friendsHere.length gt 0&gt;&gt; */
   /* one friend */
-  &lt;&lt;if _friendsHere.length eq 1&gt;&gt;
+  /* &lt;&lt;if _friendsHere.length eq 1&gt;&gt;
   You see &lt;&lt;=_friendsHere[0].name&gt;&gt;.
   &lt;&lt;elseif _friendsHere.length eq 2&gt;&gt;
   You see &lt;&lt;=_friendsHere[0].name&gt;&gt; and &lt;&lt;=_friendsHere[1].name&gt;&gt;.
@@ -973,15 +1043,16 @@ window.Character = Character;
       &lt;&lt;=_friendsHere[_i].name&gt;&gt;,
       &lt;&lt;/if&gt;&gt;
     &lt;&lt;/for&gt;&gt;
-  &lt;&lt;/if&gt;&gt;
+  &lt;&lt;/if&gt;&gt; */
 
   /* &quot;save&quot; your friend(s) */
-  &lt;&lt;for _i to 0; _i lt _friendsHere.length; _i++&gt;&gt;
+  /* &lt;&lt;for _i to 0; _i lt _friendsHere.length; _i++&gt;&gt;
     &lt;&lt;run $game.rescueFriend(_friendsHere[_i])&gt;&gt;
   &lt;&lt;/for&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
-&lt;hr size=&quot;1&quot; /&gt;</tw-passagedata><tw-passagedata pid="4" name="PassageFooter" tags="" position="475,100" size="100,100">&lt;br /&gt;
+&lt;hr size=&quot;1&quot; /&gt; 
+ */</tw-passagedata><tw-passagedata pid="4" name="PassageFooter" tags="" position="475,100" size="100,100">&lt;br /&gt;
 &lt;&lt;nobr&gt;&gt;
 /* Get available passaages */
 &lt;&lt;set _nextPassages to $game.getPassages()&gt;&gt;
